@@ -15,9 +15,7 @@ use warnings;
 
 use COD::Cell qw( cell_volume );
 use COD::CIF::Data qw( get_cell
-                       get_formula_units_z
-                       get_space_group_number
-                       get_symmetry_operators );
+                       get_formula_units_z );
 use COD::CIF::Data::CellContents qw( cif_cell_contents );
 use COD::CIF::Data::CODFlags qw( is_disordered has_coordinates has_Fobs );
 use COD::CIF::Data::Check qw( check_formula_sum_syntax );
@@ -26,7 +24,6 @@ use COD::CIF::Unicode2CIF qw( cif2unicode );
 use COD::CIF::Tags::Manage qw( cifversion get_data_value get_aliased_value );
 use COD::CIF::Tags::DictTags;
 use COD::Spacegroups::Names;
-use COD::Spacegroups::Lookup qw( make_symop_hash );
 
 use Scalar::Util qw( looks_like_number );
 use List::MoreUtils qw( uniq none any );
@@ -38,11 +35,6 @@ our @EXPORT_OK = qw(
     validate_SQL_types
     @default_data_fields
 );
-
-my %SYMOP_LOOKUP_HASH = make_symop_hash( [
-                            \@COD::Spacegroups::Lookup::COD::table,
-                            \@COD::Spacegroups::Lookup::COD::extra_settings
-                        ] );
 
 # NOTE: the 'sgNumber' field was purposely excluded
 # from the default field list for now.
@@ -141,6 +133,10 @@ my %text_value_fields2tags = (
    'radiation'      => [ qw( _diffrn_radiation_probe ) ],
    'radType'        => [ qw( _diffrn_radiation_type ) ],
    'radSymbol'      => [ qw( _diffrn_radiation_xray_symbol ) ],
+   'sgNumber'       => [ qw( _space_group.IT_number
+                             _space_group_IT_number
+                             _symmetry.Int_Tables_number
+                             _symmetry_Int_Tables_number ) ],
    'duplicateof'    => [ qw( _cod_related_duplicate_entry.code
                              _cod_related_duplicate_entry_code
                              _cod_duplicate_entry
@@ -305,14 +301,6 @@ sub cif2cod
         { 'reformat_space_group' => $reformat_space_group } );
     $data{'sgHall'} =
         get_space_group_Hall_symbol( $values );
-
-    my $symops;
-    eval {
-       $symops = get_symmetry_operators( $dataset );
-    };
-    $data{'sgNumber'} = get_space_group_number(
-                           $symops, \%SYMOP_LOOKUP_HASH, $dataset
-                        );
 
     # Get text values directly from CIF data items
     for my $field ( sort keys %text_value_fields2tags ) {
