@@ -1,6 +1,6 @@
 # Contains symops, but no space group names.
-# Space group IT number should be inferred from symops.
-# Space group IT number should be output as '2'.
+# Space group IT number should not be inferred from symops.
+# No space group IT number should be output.
 data_1
 _journal_name_full               'Fake journal name used for testing'
 _publ_section_title              'Fake paper title used for testing'
@@ -82,9 +82,8 @@ H6C H 0.2665 1.0333 0.6281 0.034 Uiso 1 calc .
 H6D H 0.1300 0.9880 0.5300 0.034 Uiso 1 calc .
 
 # Contains space group names, but no symops.
-# Symops should be inferred from the space group names.
-# Space group IT number should be inferred from symops.
-# Space group IT number should be output as '2'.
+# Symops should not be inferred from the space group names.
+# No space group IT number should be output.
 data_2
 _journal_name_full               'Fake journal name used for testing'
 _publ_section_title              'Fake paper title used for testing'
@@ -165,9 +164,9 @@ H6D H 0.1300 0.9880 0.5300 0.034 Uiso 1 calc .
 # Contains symops, but no space group names.
 # Contains the _space_group.IT_number data item.
 # Symops do not match any of the tabulated space groups.
-# Space group IT number should inferred from the symops
+# Space group IT number should not be inferred from the symops
 # Note, that the explicit space group number ('42') is purposely incorrect.
-# Space group IT number should be output as '2'.
+# Space group IT number should be output as '42'.
 data_3
 _journal_name_full               'Fake journal name used for testing'
 _publ_section_title              'Fake paper title used for testing'
@@ -1034,7 +1033,7 @@ H6D H 0.1300 0.9880 0.5300 0.034 Uiso 1 calc .
 # Contains the _space_group_IT_number data item with an unknown
 # CIF value ('?').
 # Contains the _symmetry_Int_Tables_number data item.
-# Space group IT number should be output as '42'.
+# Space group IT number should be output as '?'.
 data_13
 _journal_name_full               'Fake journal name used for testing'
 _publ_section_title              'Fake paper title used for testing'
@@ -1116,7 +1115,7 @@ H6D H 0.1300 0.9880 0.5300 0.034 Uiso 1 calc .
 # Contains the _space_group_IT_number data item with an inapplicable
 # CIF value ('.').
 # Contains the _symmetry_Int_Tables_number data item.
-# Space group IT number should be output as '42'.
+# Space group IT number should be output as '.'.
 data_14
 _journal_name_full               'Fake journal name used for testing'
 _publ_section_title              'Fake paper title used for testing'
@@ -1199,7 +1198,7 @@ H6D H 0.1300 0.9880 0.5300 0.034 Uiso 1 calc .
 # CIF value ('.').
 # Contains the _symmetry_Int_Tables_number data item with an unknown
 # CIF value ('?').
-# No space group IT number should be output.
+# Space group IT number should be output as '.'.
 data_15
 _journal_name_full               'Fake journal name used for testing'
 _publ_section_title              'Fake paper title used for testing'
