@@ -5,7 +5,6 @@ scripts/cif2cod: tests/cases/cif2cod_052.inp data_alternate: WARNING, data item 
 scripts/cif2cod: tests/cases/cif2cod_052.inp data_alternate: WARNING, data item '_journal_volume' is absent.
 scripts/cif2cod: tests/cases/cif2cod_052.inp data_alternate: WARNING, data item '_journal_page_first' is absent.
 scripts/cif2cod: tests/cases/cif2cod_052.inp data_alternate: WARNING, no Hall space group symbol found.
-scripts/cif2cod: tests/cases/cif2cod_052.inp data_alternate: WARNING, data items ['_space_group_name_H-M_alt', '_symmetry_space_group_name_H-M'] refer to the same piece of information, but have differing values ['P -1', 'P 1'] -- the 'P -1' value will be used.
 scripts/cif2cod: tests/cases/cif2cod_052.inp data_alternate: WARNING, at least one of the lattice parameters has an undefined value -- cell volume could not be calculated.
 scripts/cif2cod: tests/cases/cif2cod_052.inp data_alternate: WARNING, data item '_cell_formula_units_Z' was not found -- the Z value will be estimated.
 scripts/cif2cod: tests/cases/cif2cod_052.inp data_alternate: WARNING, not enough data to estimate Z; cell volume undefined; crystal density undefined; molecular weight undefined -- assuming Z = 1.
