@@ -2,40 +2,29 @@ scripts/cif2cod: tests/cases/cif2cod_071.inp data_1: WARNING, no Hermann-Mauguin
 scripts/cif2cod: tests/cases/cif2cod_071.inp data_1: WARNING, no Hall space group symbol found.
 scripts/cif2cod: tests/cases/cif2cod_071.inp data_3: WARNING, no Hermann-Mauguin space group symbol found.
 scripts/cif2cod: tests/cases/cif2cod_071.inp data_3: WARNING, no Hall space group symbol found.
-scripts/cif2cod: tests/cases/cif2cod_071.inp data_3: WARNING, space group number inferred from the symmetry operation list does not match the value of the '_space_group_IT_number' data item ('2' vs. '42') -- the inferred value will be used.
 scripts/cif2cod: tests/cases/cif2cod_071.inp data_4: WARNING, data item '_chemical_formula_sum' is absent.
 scripts/cif2cod: tests/cases/cif2cod_071.inp data_4: WARNING, no Hermann-Mauguin space group symbol found.
 scripts/cif2cod: tests/cases/cif2cod_071.inp data_4: WARNING, no Hall space group symbol found.
-scripts/cif2cod: tests/cases/cif2cod_071.inp data_4: WARNING, could not infer the space group number from the provided symmetry operation list -- data items that provide an explicit space group number will be used instead.
 scripts/cif2cod: tests/cases/cif2cod_071.inp data_5: WARNING, no Hermann-Mauguin space group symbol found.
 scripts/cif2cod: tests/cases/cif2cod_071.inp data_5: WARNING, no Hall space group symbol found.
-scripts/cif2cod: tests/cases/cif2cod_071.inp data_5: WARNING, could not infer the space group number from the provided symmetry operation list -- data items that provide an explicit space group number will be used instead.
 scripts/cif2cod: tests/cases/cif2cod_071.inp data_6: WARNING, no Hermann-Mauguin space group symbol found.
 scripts/cif2cod: tests/cases/cif2cod_071.inp data_6: WARNING, no Hall space group symbol found.
-scripts/cif2cod: tests/cases/cif2cod_071.inp data_6: WARNING, could not infer the space group number from the provided symmetry operation list -- data items that provide an explicit space group number will be used instead.
 scripts/cif2cod: tests/cases/cif2cod_071.inp data_7: WARNING, no Hermann-Mauguin space group symbol found.
 scripts/cif2cod: tests/cases/cif2cod_071.inp data_7: WARNING, no Hall space group symbol found.
-scripts/cif2cod: tests/cases/cif2cod_071.inp data_7: WARNING, could not infer the space group number from the provided symmetry operation list -- data items that provide an explicit space group number will be used instead.
 scripts/cif2cod: tests/cases/cif2cod_071.inp data_8: WARNING, no Hermann-Mauguin space group symbol found.
 scripts/cif2cod: tests/cases/cif2cod_071.inp data_8: WARNING, no Hall space group symbol found.
-scripts/cif2cod: tests/cases/cif2cod_071.inp data_8: WARNING, data items ['_space_group_IT_number', '_symmetry_Int_Tables_number'] refer to the same piece of information, but have differing values ['42', '41'] -- the '42' value will be used.
-scripts/cif2cod: tests/cases/cif2cod_071.inp data_8: WARNING, could not infer the space group number from the provided symmetry operation list -- data items that provide an explicit space group number will be used instead.
 scripts/cif2cod: tests/cases/cif2cod_071.inp data_8: WARNING, data items ['_space_group_IT_number', '_symmetry_Int_Tables_number'] refer to the same piece of information, but have differing values ['42', '41'] -- the '42' value will be used.
 scripts/cif2cod: tests/cases/cif2cod_071.inp data_8: WARNING, data items ['_space_group_IT_number', '_symmetry_Int_Tables_number'] refer to the same piece of information, but have differing values ['42', '41'] -- the '42' value will be used.
 scripts/cif2cod: tests/cases/cif2cod_071.inp data_9: WARNING, no Hermann-Mauguin space group symbol found.
 scripts/cif2cod: tests/cases/cif2cod_071.inp data_9: WARNING, no Hall space group symbol found.
-scripts/cif2cod: tests/cases/cif2cod_071.inp data_9: WARNING, could not infer the space group number from the provided symmetry operation list -- data items that provide an explicit space group number will be used instead.
 scripts/cif2cod: tests/cases/cif2cod_071.inp data_10: WARNING, no Hermann-Mauguin space group symbol found.
 scripts/cif2cod: tests/cases/cif2cod_071.inp data_10: WARNING, no Hall space group symbol found.
-scripts/cif2cod: tests/cases/cif2cod_071.inp data_10: WARNING, could not infer the space group number from the provided symmetry operation list -- data items that provide an explicit space group number will be used instead.
 scripts/cif2cod: tests/cases/cif2cod_071.inp data_11: WARNING, no Hermann-Mauguin space group symbol found.
 scripts/cif2cod: tests/cases/cif2cod_071.inp data_11: WARNING, no Hall space group symbol found.
 scripts/cif2cod: tests/cases/cif2cod_071.inp data_11: WARNING, data items ['_space_group_IT_number', '_symmetry_Int_Tables_number'] refer to the same piece of information, but have differing values ['2', '42'] -- the '2' value will be used.
 scripts/cif2cod: tests/cases/cif2cod_071.inp data_11: WARNING, data items ['_space_group_IT_number', '_symmetry_Int_Tables_number'] refer to the same piece of information, but have differing values ['2', '42'] -- the '2' value will be used.
-scripts/cif2cod: tests/cases/cif2cod_071.inp data_11: WARNING, data items ['_space_group_IT_number', '_symmetry_Int_Tables_number'] refer to the same piece of information, but have differing values ['2', '42'] -- the '2' value will be used.
 scripts/cif2cod: tests/cases/cif2cod_071.inp data_12: WARNING, no Hermann-Mauguin space group symbol found.
 scripts/cif2cod: tests/cases/cif2cod_071.inp data_12: WARNING, no Hall space group symbol found.
-scripts/cif2cod: tests/cases/cif2cod_071.inp data_12: WARNING, data items ['_space_group_IT_number', '_symmetry_Int_Tables_number'] refer to the same piece of information, but have differing values ['2', '42'] -- the '2' value will be used.
 scripts/cif2cod: tests/cases/cif2cod_071.inp data_12: WARNING, data items ['_space_group_IT_number', '_symmetry_Int_Tables_number'] refer to the same piece of information, but have differing values ['2', '42'] -- the '2' value will be used.
 scripts/cif2cod: tests/cases/cif2cod_071.inp data_12: WARNING, summary formula could not be calculated -- neither symmetry operation data item values, nor Hall space group name, nor Hermann-Mauguin space group name could be processed to acquire symmetry operations.
 scripts/cif2cod: tests/cases/cif2cod_071.inp data_12: WARNING, data items ['_space_group_IT_number', '_symmetry_Int_Tables_number'] refer to the same piece of information, but have differing values ['2', '42'] -- the '2' value will be used.
@@ -53,9 +42,9 @@ scripts/cif2cod: tests/cases/cif2cod_071.inp data_15: WARNING, no Hall space gro
 scripts/cif2cod: tests/cases/cif2cod_071.inp data_15: WARNING, summary formula could not be calculated -- neither symmetry operation data item values, nor Hall space group name, nor Hermann-Mauguin space group name could be processed to acquire symmetry operations.
 scripts/cif2cod: tests/cases/cif2cod_071.inp data_15: WARNING, unit cell summary formula could not be calculated -- neither symmetry operation data item values, nor Hall space group name, nor Hermann-Mauguin space group name could be processed to acquire symmetry operations.
 file;sgNumber
-"1";"2"
-"2";"2"
-"3";"2"
+"1";NULL
+"2";NULL
+"3";"42"
 "4";"42"
 "5";"42"
 "6";"42"
@@ -65,6 +54,6 @@ file;sgNumber
 "10";NULL
 "11";"2"
 "12";"2"
-"13";"42"
-"14";"42"
-"15";NULL
+"13";"?"
+"14";"."
+"15";"."
