@@ -8,6 +8,10 @@ cod-tools (unreleased)
           operation lists that do not correspond to a known space group.
         - updated the get_space_group_number() subroutine to report space
           group number values that are not integers in the range of [1, 230].
+    - COD::CIF::Data::CIF2COD::
+        - updated the cif2cod() subroutine to only output the space group IT
+          number that is explicitly provided instead of trying to infer it from
+          the symmetry operation list.
   * Fixed:
     - COD::CIF::Data:
         - updated the get_space_group_number() subroutine to ignore
